--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <body>
         <title> </title>
-        <h1>Sahaya Rabina A</h1>
+        <h1>Ranjith M</h1>
         <p>Data Analyst</p>
-        <img src="rabina.png" height="400px">
+        <img src="prof.png" height="400px">
 </body>
     
 </html>
