--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
         <title> </title>
-        <h1>Ranjith M</h1>
+        <h1>Ranjith Muthu</h1>
         <p>Data Analyst</p>
         <img src="prof.png" height="400px">
 </body>
