--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <body>
         <title> </title>
         <h1>Ranjith Muthu</h1>
+        <h1>Msc Computer Science</h1>
+
         <p>Data Analyst</p>
         <img src="prof.png" height="400px">
 </body>
